Making the accreditations expand/collapse to display additional information.  Also moved the search form page controllers to a sub-folder to avoid clutter.

--- a/SmartRoutes/Content/Views/GuidedSearchPageView.css
+++ b/SmartRoutes/Content/Views/GuidedSearchPageView.css
@@ -78,6 +78,12 @@
     display: none;
 }
 
+/* Accreditation form page styling. */
+
+.sr-accreditation-link {
+    display: none;
+}
+
 /* Page view styling. */
 
 #sr-guided-search-page-view {
